[package]
name = "fee-escalator-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = "2.0.7"
eyre = "0.6.8"
futures = "0.3.28"
futures-util = "0.3.28"
lazy_static = "1.4.0"
regex = "1.8.4"
reqwest = "0.11.18"
serde = "1.0.164"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
tokio-tungstenite = "0.19.0"
tungstenite = "0.19.0"
websocket = "0.26.5"
